--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Landing Page</title>
+  <title>newlive</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-    header { background: #007BFF; color: white; text-align: center; padding: 20px; }
-    section { padding: 20px; max-width: 800px; margin: 0 auto; }
+    body { font-family: Comic Sans MS, sans-serif; margin: 10; padding: 10; }
+    header { background: #b744da; color: rgb(255, 255, 255); text-align: left; padding: 50px; }
+    section { padding: 100px; max-width: 800px; margin: 0 auto; }
     .cta { text-align: center; margin-top: 20px; }
-    button { padding: 10px 20px; font-size: 16px; background: #007BFF; color: white; border: none; cursor: pointer; }
+    button { padding: 10px 20px; font-size: 16px; background: #f72cdc; color: white; border: none; cursor: pointer; }
     button:hover { background: #0056b3; }
   </style>
 </head>
 <body>
   <header>
-    <h1>Welcome to My Landing Page</h1>
-    <p>Your gateway to an amazing product.</p>
+    <h1>Newlife</h1>
+    <p>The best way to give a new life to your old clothes.</p>
   </header>
   <section>
-    <h2>About the Product</h2>
-    <p>Discover features that will change your life!</p>
+    <h2>we receive  your old clothes and in exchange  you get the one you like avalible on our page</h2>
+    <p>let's create a new live!...starting with your clothes</p>
     <div class="cta">
       <button>Get Started</button>
     </div>
