--- a/index2.html
+++ b/index2.html
@@ -18,12 +18,12 @@
 
     <!-- Hero Section -->
     <header class="relative flex items-center justify-center h-screen bg-cover bg-center" style="background-image: url('img1.jpeg');">
-        <div class="bg-white bg-opacity-60 p-12 rounded-md text-center">
+        <div class="bg-white bg-opacity-70 p-12 rounded-md text-center">
             <h1 class="text-8xl font-bold text-black -900 italic">Where your clothes <br> find a new life</h1>
-            <button class="mt-6 px-6 py-2 bg-blue-600 text-white font-semibold hover:bg-blue-700">SHOP NOW</button>
             <!-- WhatsApp Floating Button -->
             <div class="mt-4">
                 <a href="https://wa.me/51940425904">
+                    <button class="mt-6 px-6 py-2 bg-blue-600 text-white font-semibold hover:bg-blue-700">SHOP NOW</button>
                     <img src="aer.png" alt="WhatsApp" class="w-14 mx-auto"> 
                 </a>
             </div>
@@ -46,7 +46,7 @@
                 <p class="font-bold mt-2">transform</p>
             </div>
             <div class="text-center bg-pink-100 bg-opacity-50 p-4 rounded-lg">
-                <img src="donde_tu_ropa_encuentra_una_nueva_vida__2_-removebg-preview.png"Sell" class="w-40 h-40 object-contain mx-auto">
+                <img src="donde_tu_ropa_encuentra_una_nueva_vida__2_-removebg-preview.png"Sell" class="w-full h-40 object-contain mx-auto">
                 <p class="font-bold mt-2">sell</p>
             </div>
         </div>
