--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
     <footer class="text-center py-4 text-sm mt-10">
         &copy; COPYRIGHT 2025. ALL RIGHTS RESERVED
     </footer>
+    <div class="text-center mt-10">
+        <a href="tos.html" class="text-blue-600 underline hover:text-blue-800 text-lg">Terms and Conditions</a>
+    </div>
+    </footer>
+<div class="text-center mt-10">
+    <a href="privacy.html" class="text-blue-600 underline hover:text-blue-800 text-lg">Privacy Policy</a>
+</div>
+    
 </body>
 </html>
 
