--- a/tos.html
+++ b/tos.html
@@ -10,7 +10,6 @@
 
     <div class="bg-white p-8 rounded-lg shadow-lg max-w-4xl w-full">
         <h1 class="text-4xl font-bold text-red-900 mb-6 text-center">Terms and Conditions</h1>
-        <h1 class="text-3xl font-bold text-red-900 mb-6 text-center">Terms and Conditions</h1>
         <p class="text-lg text-gray-700 leading-relaxed">
             Terms and Conditions Last updated February 21, 2025. AGREEMENT TO OUR LEGAL TERMS. 
             We are Newcycle ("Company," "we," "us," "our"), a company registered in Peru at Villa Militar Oeste, Mz.B Lt.3, Chorrillos, Lima 15063...
@@ -193,7 +192,7 @@ These Legal Terms and any policies or operating rules posted by us on the Servic
 These Legal Terms operate to the fullest extent permissible by law. We may assign any or all of our rights and obligations to others at any time. We shall not be responsible or liable for any loss, damage, delay, or failure to act caused by any cause beyond our reasonable control.
 If any provision or part of a provision of these Legal Terms is determined to be unlawful, void, or unenforceable, that provision or part of the provision is deemed severable from these Legal Terms and does not affect the validity and enforceability of any remaining provisions.
 There is no joint venture, partnership, employment, or agency relationship created between you and us as a result of these Legal Terms or use of the Services. You agree that these Legal Terms will not be construed against us by virtue of having drafted them. You hereby waive any and all defenses you may have based on the electronic form of these Legal Terms and the lack of signing by the parties hereto to execute these Legal Terms.
-27. CONTACT US
+<h1 class="text-1xl font-bold text-black-900 mb-6 text-center">CONTACT US</h1>
 In order to resolve a complaint regarding the Services or to receive further information regarding use of the Services, please contact us at:
 Newcycle
 Villa Militar Oeste
